--- a/content/support/index.slim
+++ b/content/support/index.slim
@@ -78,7 +78,7 @@ hr
 
 		h2 id="bugbounty" Bug bounty program
 		markdown: 
-			We offer free support for all *bug-related* inquires, both through e-mail (**support@imageresizing.net**) and [StackOverflow](http://stackoverflow.com/questions/tagged/imageresizer).
+			We offer free support for all *bug-related* inquiries, both through e-mail (**support@imageresizing.net**) and [StackOverflow](http://stackoverflow.com/questions/tagged/imageresizer).
 
 			We will also PayPal you between $5 and $50 for each bug you report - if you're the first to report it, and if it's in the latest version of one of our ImageResizer.* assemblies.
 
