--- a/content/support/index.slim
+++ b/content/support/index.slim
@@ -80,7 +80,7 @@ hr
 		markdown: 
 			We offer free support for all *bug-related* inquiries through e-mail (**support@imageresizing.net**) and [StackOverflow](http://stackoverflow.com/questions/tagged/imageresizer).
 
-			We will also PayPal you between $5 and $50 for each bug you report - if you're the first to report it, and if it's in the latest version of one of our ImageResizer.* assemblies.
+			We will also PayPal you between $5 and $50 for each bug you report if you're the first to report it, and if it's in the latest version of one of our ImageResizer.* assemblies.
 
 			The average bug reward is $15; only security holes and memory leaks are eligibile for the $50 level. 
 
