--- a/content/support/index.slim
+++ b/content/support/index.slim
@@ -82,7 +82,7 @@ hr
 
 			We will also PayPal you between $5 and $50 for each bug you report if you're the first to report it, and if it's in the latest version of one of our ImageResizer.* assemblies.
 
-			The average bug reward is $15; only security holes and memory leaks are eligibile for the $50 level. 
+			The average bug reward is $15; only security holes and memory leaks are eligible for the $50 level. 
 
 			We welcome feature requests, and everyone may [sumbit new ideas or vote for existing ones at the uservoice site](http://resizer.uservoice.com/forums/108373-image-resizer-v3).
 	.span6
@@ -92,7 +92,7 @@ hr
 
 			1. The question is [tagged 'imageresizer'](http://stackoverflow.com/questions/tagged/imageresizer) so we can find it.
 			2. The question [includes a gist](https://gist.github.com/) with the diagnostics page output.
-			3. The question is about the URL API, and doesn't [involve a really bad idea](/docs/bad) (If you have a *smart* questions about the Managed API, we *may* help you).
+			3. The question is about the URL API, and doesn't [involve a really bad idea](/docs/bad) (If you have a *smart* question about the Managed API, we *may* help you).
 			4. The question is detailed enough to answer, shows some diagnostic effort.
 
 			We typically answer StackOverflow questions within 1-2 weeks. E-mail your question URL to **support@imageresizing.net** for a faster response. 
