--- a/content/support/index.slim
+++ b/content/support/index.slim
@@ -97,7 +97,7 @@ hr
 
 			We typically answer StackOverflow questions within 1-2 weeks. E-mail your question URL to **support@imageresizing.net** for a faster response. 
 
-			If we take the time to provide a good answer to your question, please be courteous; both mark it as the answer and vote it up. We prioritize questions from StackOverflow users with a good reputation.
+			If we take the time to provide a good answer to your question, please be courteous; mark it as the answer and vote it up. We prioritize questions from StackOverflow users with a good reputation.
 
 
 
