--- a/content/licenses/index.slim
+++ b/content/licenses/index.slim
@@ -81,7 +81,7 @@ h1 Licenses
       .details
         ul
           li
-            strong Everything from Free, plus:
+            strong Includes all free features, plus:
           li Free minor version upgrades
           li.tooltop-container
             .tooltip
