Replaced "Bad Ideas" page with "Best Practices Guide"

--- a/content/support/index.slim
+++ b/content/support/index.slim
@@ -92,7 +92,7 @@ hr
 
 			1. The question is [tagged 'imageresizer'](http://stackoverflow.com/questions/tagged/imageresizer) so we can find it.
 			2. The question [includes a gist](https://gist.github.com/) with the diagnostics page output.
-			3. The question is about the URL API, and doesn't [involve a really bad idea](/docs/bad) (If you have a *smart* questions about the Managed API, we *may* help you).
+			3. The question is about the URL API, and follows [best praticies](/docs/best-practices).
 			4. The question is detailed enough to answer, shows some diagnostic effort.
 
 			We typically answer StackOverflow questions within 1-2 weeks. E-mail your question URL to **support@imageresizing.net** for a faster response. 
