--- a/content/index.slim
+++ b/content/index.slim
@@ -9,6 +9,30 @@ h1 RESTful image processing
 == content_for :banner do
 
   .container
+    .slider
+      #flex1.flexslider
+        ul.slides
+          li
+            img src="http://cdn4.f-cdn.com/contestentries/14312/7092528/5137361bdc16e_thumb900.jpg"
+          li
+            img src="http://cdn6.f-cdn.com/contestentries/14312/7092528/51373a58b04df_thumb900.jpg"
+          li
+            img src="http://cdn2.f-cdn.com/contestentries/14312/7076108/513738b5903aa_thumb900.jpg"
+          li
+            img src="http://cdn4.f-cdn.com/contestentries/14312/7092528/51375f862b3ff_thumb900.jpg"
+          li
+            img src="http://cdn6.f-cdn.com/contestentries/14312/7092528/51375926db640_thumb900.jpg"
+          li
+            img src="http://cdn3.f-cdn.com/contestentries/14312/7076108/513758af03d26_thumb900.jpg"
+            .slide-caption.n.hidden-phone
+              h3 This is a caption
+              p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+        ul.flex-direction-nav
+          li: a.flex-prev href="#" Previous
+          li: a.flex-next href="#" Next
+
+/
+  .container
     .slider-wrapper.home-slider
       #da-slider.da-slider
 
