Fixed Sierra Trading post logo transparency. Dropped PMG Austin and RepZio logos until transparent versions can be found. Switched to local copy of eksponent logo.

--- a/content/index.slim
+++ b/content/index.slim
@@ -266,11 +266,12 @@ h3 Who uses ImageResizer?
   ul.slides.clients
     li: img src="/img/logos/collectiveli_256.png" alt="collective.li"
     li: img src="/img/logos/logo_mindrevolution_black.png"  alt="mindrevolution"
-    li: img src="http://s.stpost.com/img/sierra-logo.gif" alt="Sierra Trading Post"
-    li: img src="http://www.eksponent.com/Content/images/logo.png"  alt="Eksponent"
-    li: img src="/img/logos/pmg-austin.png" alt="PMG Austin"
-    li: img src="/img/logos/repzio-logo-144.gif"  alt="Repzio"
-    li: img src="http://upload.wikimedia.org/wikipedia/commons/thumb/f/f4/Microsoft.svg/200px-Microsoft.svg.png" alt="Microsoft"
+    li: img src="/img/logos/stp-logo-trans.png" alt="Sierra Trading Post"
+    li: img src="/img/logos/eksponent.png"  alt="Eksponent"
+    / li: img src="/img/logos/pmg-austin-trans.png" alt="PMG Austin"
+    / li: img src="/img/logos/repzio-logo-144.gif"  alt="Repzio"
+    li: img src="http://upload.wikimedia.org/wikipedia/commons/thumb/f/f4/Microsoft.svg/200px-Microsoft.svg.png" alt="Microsoft" 
+    / http://www.microsoft.com/global/en-us/news/publishingimages/logos/MSFT_logo_Web.jpg
     li: img src="http://upload.wikimedia.org/wikipedia/commons/thumb/4/48/EBay_logo.png/320px-EBay_logo.png" alt="eBay"
     li: img src="/img/logos/publishgreen.png" alt="Publish Green"
     li: img src="/img/logos/flavorplate.png" alt="flavor plate"
