--- a/content/docs/workswith/index.slim
+++ b/content/docs/workswith/index.slim
@@ -79,7 +79,7 @@ h1 Blissfully compatible with practically everything
   .span3
     h2 Hosting providers
     p 
-      | If possible, look for provider that allows full trust. 
+      | If possible, look for a provider that allows full trust. 
       a href="/docs/workswith/mediumtrust" Medium Trust is supported for most functionality
       | , but not all. We've personally used the following hosting providers:
     ul.star_list
