--- a/content/docs/workswith/index.slim
+++ b/content/docs/workswith/index.slim
@@ -37,7 +37,7 @@ h1 Blissfully compatible with practically everything
       li Limelight
       li Voxel
     markdown:
-      Any true CDN (true CDNs support origin-pull) is compatible with ImageResizer. Ensure you enable querystring preservation, or use ImageResizer's semicolon syntax instead.
+      Any true CDN (true CDNs support origin-pull) is compatible with ImageResizer. Be sure to enable querystring preservation, or use ImageResizer's semicolon syntax instead.
 
       Rackspace Cloud Files is *not* a CDN. If you'd like them to *become* one, you [can vote for custom origin support here](http://feedback.rackspace.com/forums/71021-product-feedback/suggestions/1105435-add-the-origin-pull-feature-to-cloud-files).
   .span3
