--- a/content/docs/workswith/index.slim
+++ b/content/docs/workswith/index.slim
@@ -51,7 +51,7 @@ h1 Blissfully compatible with practically everything
       li: a href="/docs/workswith/episerver" EPiServer
       li: a href="/docs/workswith/sitecore" Sitecore
       li: a href="/docs/workswith/sitefinity" Sitefinity
-    p: strong You're CMS isn't here? That means you can follow the vanilla ASP.NET installation instructions.
+    p: strong If your CMS isn't listed here, you can follow the vanilla ASP.NET installation instructions.
     p Over 30 CMSes include ImageResizer Essential edition - don't be surprised if your CMS already has it installed.
 
   .span3
