--- a/content/docs/community.slim
+++ b/content/docs/community.slim
@@ -105,7 +105,7 @@ h1 ImageResizer Community
       * [Nokia Developer Guide: Delivering image tiles to Windows Phone with ImageResizer](http://www.developer.nokia.com/Community/Wiki/Generating_Live_tiles_for_Windows_Phone_from_Live_Data#ImageResizer) (Note - while they're using an MVC action, we strongly suggest using the HttpModule instead if you wish to have caching work properly)
       * [Nathanael Jones: Using JCrop with ImageResizer in 11 lines of javascript](http://nathanaeljones.com/573/combining-jcrop-and-server-side-image-resizing/)
       * [heltBlank: Umbraco and ImageResizer](http://heltblank.wordpress.com/2012/02/13/imageresizing-net-and-umbraco-5-jupiter/)
-      * [uBootstrap for Umbraco](http://our.umbraco.org/projects/starter-kits/ubootstrap) now [includes ImageResizer to handle reponsive imaging needs](http://jlusar.es/ubootstrap-fluent-layout)
+      * [uBootstrap for Umbraco](http://our.umbraco.org/projects/starter-kits/ubootstrap) now [includes ImageResizer to handle responsive imaging needs](http://jlusar.es/ubootstrap-fluent-layout)
 
       There are also over [50 StackOverflow posts about ImageResizer](http://stackoverflow.com/questions/tagged/imageresizer).
 
