Made standalone statement larger, added link to the Redistribution and CMS integration guide.

--- a/content/docs/workswith/index.slim
+++ b/content/docs/workswith/index.slim
@@ -1,10 +1,12 @@
 Aliases: /docs/compatible
+Layout: page
+Tags: install, configure
 
 h1 Blissfully compatible with practically everything
 
 .well
   markdown:
-    Remember, ImageResizer is a web service, which means you can always [run it in standalone mode](/docs/install/standalone) if embedded mode isn't an option. Embedded mode means running in-process, inside an existing ASP.NET application, which is what we're referring to on this page.
+    ### Remember, ImageResizer is a web service, which means you can always [run it in standalone mode](/docs/install/standalone) if embedded mode isn't an option. Embedded mode means running in-process, inside an existing ASP.NET application (the most popular scenario).
 .row
   .span3
     h2 Image Storage Backends
@@ -52,8 +54,11 @@ h1 Blissfully compatible with practically everything
       li: a href="/docs/workswith/sitecore" Sitecore
       li: a href="/docs/workswith/sitefinity" Sitefinity
     p: strong You're CMS isn't here? That means you can follow the vanilla ASP.NET installation instructions.
-    p Over 30 CMSes include ImageResizer Essential edition - don't be suprised if your CMS already has it installed.
-
+    p 
+      | Over 30 CMSes include ImageResizer Essential edition - don't be suprised if your CMS already has it installed.
+    p: strong 
+      | Want to redistribute ImageResizer with your product? Check out 
+      a href="/docs/redist" the Redistribution and CMS Integration Guide.
   .span3
     h2 Supported output formats
     ul.star_list
