Made community box clickable, added links to Best Practices and Community page

--- a/content/index.slim
+++ b/content/index.slim
@@ -94,7 +94,9 @@ h1 RESTful image processing
     ul.arrow_list
       li: a href="/docs/install" Installation Guide
       li: a href="/docs/workswith" Compatibility Guide
+      li: a href="/docs/best-practices" Best Practices
       li: a href="/docs/troubleshoot" Troubleshooting guide
+      li: a href="/docs/community" Community Plugins and Articles
 
     a href="/docs" 
       | more...
@@ -282,13 +284,13 @@ hr
 .row
   .icons-box-vert-container
     .span4
-     .icons-box-vert
-        i.ico-white.circle-color-full.ico-group
-        .icons-box-vert-info
-          h3 Helpful community
-          markdown:
-            ImageResizer [boasts a sizeable collection of community plugins, and there are always people around](/docs/community) to give you a hand at [StackOverflow:ImageResizer](http://stackoverflow.com/questions/tagged/imageresizer) when the [self-diagnostics](/plugins/diagnostics) can't help.
-        .clear
+      a href="/docs/community"
+        .icons-box-vert
+          i.ico-white.circle-color-full.ico-group
+          .icons-box-vert-info
+            h3 Helpful community
+            p ImageResizer boasts a sizeable collection of community plugins, and there are always people around to give you a hand at StackOverflow:ImageResizer when the self-diagnostics can't help.
+          .clear
     .span4
       .icons-box-vert
         i.ico-white.circle-color-full.ico-file-export
