--- a/content/docs/redist.slim
+++ b/content/docs/redist.slim
@@ -24,7 +24,7 @@ h1 Redistribution and CMS Integration guide
     markdown:
       TinyCache is a lighter version of DiskCache, suitable for small websites and projects which aren't photo heavy.
 
-      TinyCache offers a fixed-size (30MB), disk-persisted memory cache. The average size of a resized image is 30KB, so TinyCache can generally store the 1,000 most popular image variations. We reccomend that websites with over a few hundred images upgrade to DiskCache, which is designed to cache millions of images.
+      TinyCache offers a fixed-size (30MB), disk-persisted memory cache. The average size of a resized image is 30KB, so TinyCache can generally store the 1,000 most popular image variations. We reccommend that websites with over a few hundred images upgrade to DiskCache, which is designed to cache millions of images.
 
       TinyCache is not yet a part of ImageResizer Essential Edition, but we're looking for partners willing to experiment with it. 
 
