--- a/content/docs/redist.slim
+++ b/content/docs/redist.slim
@@ -8,7 +8,7 @@ h1 Redistribution and CMS Integration guide
   h3
     | We encourage content management systems, modules, and other libraries to freely include and redistribute ImageResizer Essential Edition. Email your project URL to `support@imageresizing.net` and  
     a href="/docs/community" we will list you on the Community page. 
-    | With advance notice, we can also verify you are integrating ImageResizer properly. 
+    | With advance notice, we can also verify if you are integrating ImageResizer properly. 
 
 .row
   .span3
