--- a/content/css/less/jquery.bxslider.less
+++ b/content/css/less/jquery.bxslider.less
@@ -49,7 +49,7 @@
 
 .bx-wrapper .bx-loading {
 	min-height: 50px;
-	background: url(images/bx_loader.gif) center center no-repeat #fff;
+	background: url("@{imgbase}bx_loader.gif") center center no-repeat #fff;
 	height: 100%;
 	width: 100%;
 	position: absolute;
@@ -98,12 +98,12 @@
 
 .bx-wrapper .bx-prev {
 	left: 10px;
-	background: url(images/controls.png) no-repeat 0 -32px;
+	background: url("@{imgbase}controls.png") no-repeat 0 -32px;
 }
 
 .bx-wrapper .bx-next {
 	right: 10px;
-	background: url(images/controls.png) no-repeat -43px -32px;
+	background: url("@{imgbase}controls.png") no-repeat -43px -32px;
 }
 
 .bx-wrapper .bx-prev:hover {
@@ -141,7 +141,7 @@
 	width: 10px;
 	height: 11px;
 	outline: 0;
-	background: url(images/controls.png) -86px -11px no-repeat;
+	background: url("@{imgbase}controls.png") -86px -11px no-repeat;
 	margin: 0 3px;
 }
 
@@ -156,7 +156,7 @@
 	width: 9px;
 	height: 11px;
 	outline: 0;
-	background: url(images/controls.png) -86px -44px no-repeat;
+	background: url("@{imgbase}controls.png") -86px -44px no-repeat;
 	margin: 0 3px;
 }
 
