Added a.block and a.plaintext classes for making blocks clickable without messing up their styling.

--- a/content/css/less/custom.less
+++ b/content/css/less/custom.less
@@ -68,3 +68,11 @@ div.site-subheader{
 }
 
 .clients-carousel li img {-webkit-filter:none;}
+
+a.block{display:block;}
+a.plaintext {color:@textColor;}
+a.plaintext:hover{
+  text-decoration: none !important;
+};
+
+
