Fix bug in bxslider css reference

--- a/content/css/less/site.less
+++ b/content/css/less/site.less
@@ -12,7 +12,7 @@
 @import "hover.less";       /* Hover CSS3 Effect */
 @import "fancybox.less";      /* Fancybox */
 
-@import "jquery.bxslider";
+@import "jquery.bxslider.less";
 
 @import "smart";
 
