Converted logo scroller to bxSlider. Condensed 9 feature boxes into 8, 4 columns instead of 3. Move logos up and showcases down (for now).

--- a/content/css/less/custom.less
+++ b/content/css/less/custom.less
@@ -67,7 +67,22 @@ div.site-subheader{
   margin-bottom:14px;
 }
 
-.clients-carousel li img {-webkit-filter:none;}
+
+.client-logo-carousel {
+
+}
+
+/*Make client logo arrows more transparent */
+
+.bx-transparent .bx-prev, .bx-transparent .bx-next {
+  opacity:0.3;
+}
+.bx-transparent .bx-prev:hover, .bx-transparent  .bx-next:hover {
+  opacity:1;
+}
+
+
+
 
 a.block{display:block;}
 a.plaintext {color:@textColor;}
