--- a/content/index.slim
+++ b/content/index.slim
@@ -1,6 +1,6 @@
 Menu: home
 Title: ASP.NET Image Resizing, Cropping, & Upload Module for IIS - Free & Open Source - MVC compatible
-Libs: uservoice, plusone, -comments
+Libs: uservoice, plusone, -comments, bxSlider
 Aliases: )
 Layout: layout
 
@@ -118,6 +118,99 @@ h1 RESTful image processing
             = p.meta.short_heading || p.heading
     a href="/blog" 
       | more...
+
+h3 Who uses ImageResizer?
+.bx-transparent
+  ul.client-logo-carousel
+    li: img src="http://img.imageresizing.net/s3/resizer-web/clientlogos/collectiveli_256.png?width=160&height=100" alt="collective.li"
+    li: img src="http://img.imageresizing.net/s3/resizer-web/clientlogos/logo_mindrevolution_black.png?width=160&height=100"  alt="mindrevolution"
+    li: img src="http://img.imageresizing.net/s3/resizer-web/clientlogos/stp-logo-trans.png?width=160&height=100" alt="Sierra Trading Post"
+    li: img src="http://img.imageresizing.net/s3/resizer-web/clientlogos/eksponent.png?width=160&height=100"  alt="Eksponent"
+    / li: img src="/img/logos/pmg-austin-trans.png" alt="PMG Austin"
+    / li: img src="/img/logos/repzio-logo-144.gif"  alt="Repzio"
+    li: img src="http://img.imageresizing.net/s3/resizer-web/clientlogos/Microsoft200px.png?width=160&height=100" alt="Microsoft" 
+    / http://www.microsoft.com/global/en-us/news/publishingimages/logos/MSFT_logo_Web.jpg
+    li: img src="http://img.imageresizing.net/s3/resizer-web/clientlogos/ebay-300.png?width=160&height=100" alt="eBay"
+    li: img src="http://img.imageresizing.net/s3/resizer-web/clientlogos/publishgreen.png?width=160&height=100" alt="Publish Green"
+    li: img src="http://img.imageresizing.net/s3/resizer-web/clientlogos/flavorplate.png?width=160&height=100" alt="flavor plate"
+    li: img src="http://img.imageresizing.net/s3/resizer-web/clientlogos/MizuniLogoR_933x216.png?width=160&height=100" alt="Mizuni"
+    li: img src="http://img.imageresizing.net/s3/resizer-web/clientlogos/SoulRebornLogo.png?width=160&height=100" alt="Soul Reborn"
+
+
+
+hr
+.row
+  .span3
+    a.block.plaintext href="/docs/workswith"
+      .icons-box
+        i.ico-white.circle-color-full.ico-link
+        h3 Compatible with your CMS
+        markdown:
+          If your CMS doesn't already include ImageResizer, you can add it in minutes. Standard drop-in installation works with nearly every CMS, and we have instructions for the rest.
+        .clear
+  .span3
+    a.block.plaintext href="/docs/comprehensive"
+      .icons-box
+        i.ico-white.circle-color-full.ico-tint
+        h3 Full imaging suite
+        markdown:
+          With the Creative Edition, you can unlock a comprehensive imaging suite. 
+          Bring clarity to your photos with the unsharp mask, white balance adjustment, noise removal, contrast, saturation, and brightness tools. Design text and image overlays, and apply sophisticated filters.
+        .clear
+  .span3
+    a.block.plaintext href="/docs/stable"
+      .icons-box
+        i.ico-white.circle-color-full.ico-shield
+        h3 Secure and stable
+        markdown:
+          Secure by default, ImageResizer protects againsts DDOS and XSS attacks and minimizes attack surface with a plugin model.
+          Unlike most imaging libraries, ImageResizer was designed for server-side use and multi-year uptimes since day 1.
+        .clear
+  .span3
+    a.block.plaintext href="/docs/performant"
+      .icons-box
+        i.ico-white.circle-color-full.ico-stats
+        h3 High performance
+        markdown:
+          Upgrade to the Performance Edition and scale to millions of images and users. 
+          We also support Amazon CloudFront and Microsoft CDN, and you can use S3 or Azure for centralized image storage.
+        .clear
+
+.row
+  .span3
+    a.block.plaintext href="/docs/community"
+      .icons-box
+        i.ico-white.circle-color-full.ico-group
+        h3 Helpful community
+        p ImageResizer boasts a sizeable collection of community plugins, and there are always people around to give you a hand at StackOverflow:ImageResizer when the self-diagnostics can't help.
+        .clear
+  .span3
+    a.block.plaintext href="/docs/agile"
+      .icons-box
+        i.ico-white.circle-color-full.ico-roundabout
+        h3 Agile and DRY
+        markdown:
+          Single-source imaging is the only manageable solution for mobile and responsive websites.
+
+          Stop the endless photoshop-upload-test cycle. With our simple API, images can be the easiest part of your job. 
+        .clear
+  .span3
+    .icons-box
+      i.ico-white.circle-color-full.ico-file-export
+      h3 Standardized
+      markdown:
+        Vendor lock-in is evil. We're working with others in the industry to standardize the RESTful Image API. [Read more at riapi.org](http://riapi.org)
+      
+      .clear
+  .span3
+    .icons-box
+      i.ico-cup.ico-white.circle-color-full
+      h3 Open source
+      markdown:
+        Core functionality is free and open source under the [Freedom license](/licenses/freedom). 
+        Everything we offer includes source code and permits modification. **We reward pull requests**.
+      .clear
+
 .row
   .span9
     .title
@@ -184,135 +277,4 @@ h1 RESTful image processing
             .testimonials-author
               | Dorian Collier, 
               span Deesea
-
-.row
-  .icons-box-vert-container
-    .span4
-      a href="/docs/workswith"
-        .icons-box-vert
-          i.ico-white.circle-color-full.ico-link
-          .icons-box-vert-info
-            h3 Compatible with your CMS
-            markdown:
-              If your CMS doesn't already include ImageResizer, you can add it in minutes. Standard drop-in installation works with nearly every CMS, and we have instructions for the rest.
-              
-          .clear
-    .span4
-      a href="/docs/agile"
-        .icons-box-vert
-          i.ico-white.circle-color-full.ico-roundabout
-          .icons-box-vert-info
-            h3 Single-source imaging
-            markdown:
-              Single-source imaging is the only manageable solution for mobile and responsive websites.
-
-              Manual version management leads to medical bills.
-          .clear
-    .span4
-      a href="/docs/stable"
-        .icons-box-vert
-          i.ico-white.circle-color-full.ico-shield
-          .icons-box-vert-info
-            h3 Secure and stable
-            markdown:
-              Secure by default, ImageResizer protects againsts DDOS and XSS attacks and minimizes attack surface with a plugin model.
-
-              Unlike most imaging libraries, ImageResizer was designed for server-side use and multi-year uptimes since day 1.
-            
-          .clear
-  .clear
-
-
-
-.row
-  .icons-box-vert-container
-    .span4
-      a href="/docs/agile"
-        .icons-box-vert
-          i.ico-white.circle-color-full.ico-roundabout
-          .icons-box-vert-info
-            h3 Achieve agility
-            markdown:
-               Stop the endless photoshop-upload-test cycle. With our simple API, images can be the easiest part of your job. 
-
-               Tweak in your browser, not your desktop photo-editor.
-          .clear
-
-    .span4
-      a href="/docs/performant"
-        .icons-box-vert
-          i.ico-white.circle-color-full.ico-stats
-          .icons-box-vert-info
-            h3 High performance
-            markdown:
-              Upgrade to the Performance Edition and scale to millions of images and users. 
-
-              We also support Amazon CloudFront and Microsoft CDN, and you can use S3 or Azure for centralized image storage.
-
-          .clear
-    .span4
-      a href="/docs/comprehensive"
-        .icons-box-vert
-          i.ico-white.circle-color-full.ico-tint
-          .icons-box-vert-info
-            h3 Full imaging suite
-            markdown:
-              With the Creative Edition, you can unlock a comprehensive imaging suite. 
-
-              Bring clarity to your photos with the unsharp mask, white balance adjustment, noise removal, contrast, saturation, and brightness tools. Design text and image overlays, and apply sophisticated filters.
-          .clear
-  .clear
-
-h3 Who uses ImageResizer?
-.clients-carousel
-  ul.slides.clients
-    li: img src="/img/logos/collectiveli_256.png" alt="collective.li"
-    li: img src="/img/logos/logo_mindrevolution_black.png"  alt="mindrevolution"
-    li: img src="/img/logos/stp-logo-trans.png" alt="Sierra Trading Post"
-    li: img src="/img/logos/eksponent.png"  alt="Eksponent"
-    / li: img src="/img/logos/pmg-austin-trans.png" alt="PMG Austin"
-    / li: img src="/img/logos/repzio-logo-144.gif"  alt="Repzio"
-    li: img src="http://upload.wikimedia.org/wikipedia/commons/thumb/f/f4/Microsoft.svg/200px-Microsoft.svg.png" alt="Microsoft" 
-    / http://www.microsoft.com/global/en-us/news/publishingimages/logos/MSFT_logo_Web.jpg
-    li: img src="http://upload.wikimedia.org/wikipedia/commons/thumb/4/48/EBay_logo.png/320px-EBay_logo.png" alt="eBay"
-    li: img src="/img/logos/publishgreen.png" alt="Publish Green"
-    li: img src="/img/logos/flavorplate.png" alt="flavor plate"
-    li: img src="/img/logos/MizuniLogoR_933x216.png" alt="Mizuni"
-    li: img src="/img/logos/SoulRebornLogo.png" alt="Soul Reborn"
-hr
-
-.row
-  .icons-box-vert-container
-    .span4
-      a href="/docs/community"
-        .icons-box-vert
-          i.ico-white.circle-color-full.ico-group
-          .icons-box-vert-info
-            h3 Helpful community
-            p ImageResizer boasts a sizeable collection of community plugins, and there are always people around to give you a hand at StackOverflow:ImageResizer when the self-diagnostics can't help.
-          .clear
-    .span4
-      .icons-box-vert
-        i.ico-white.circle-color-full.ico-file-export
-        .icons-box-vert-info
-          h3 Standardized
-          markdown:
-            Vendor lock-in is evil. We're working with others in the industry to standardize the RESTful Image API. [Read more at riapi.org](http://riapi.org)
-          
-        .clear
-    .span4      
-      .icons-box-vert
-        i.ico-cup.ico-white.circle-color-full
-        .icons-box-vert-info
-          h3 Open source
-          markdown:
-            Core functionality is free and open source under the [Freedom license](/licenses/freedom). 
-            
-            Everything we offer includes source code and permits modification. **We reward pull requests**.
-          
-        .clear
-  .clear
-
-
-
 
