Slimmed down bxSlider style for logos

--- a/content/css/less/custom.less
+++ b/content/css/less/custom.less
@@ -81,8 +81,18 @@ div.site-subheader{
   opacity:1;
 }
 
+.bx-transparent .bx-viewport{
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+  box-shadow:none;
 
-
+}
+.bx-transparent .bx-pager{
+  padding-top:8px;
+}
+.bx-transparent .bx-wrapper{
+  margin-bottom:35px;
+}
 
 a.block{display:block;}
 a.plaintext {color:@textColor;}
