Fixed showcase image URLs

--- a/content/index.slim
+++ b/content/index.slim
@@ -216,7 +216,7 @@ h3 Who uses ImageResizer?
       .span3
         .picture
           a href="http://www.collective.li" title="collective.li"
-            img src="/img/logos/Banner270.jpg" alt="collective.li"
+            img src="http://img.imageresizing.net/s3/resizer-web/showcase/Banner780.jpg?width=270&format=png" alt="collective.li"
             .image-overlay-zoom
         .item-description
           h4: a(href="http://www.collective.li") collective.li
@@ -225,7 +225,7 @@ h3 Who uses ImageResizer?
       .span3
         .picture
            a href="http://london.msn.co.uk/" title="MSN London Olympic Games 2012"
-            img src="/img/logos/olympics-270.jpg" alt="MSN London Olympics 2012"
+            img src="http://img.imageresizing.net/s3/resizer-web/showcase/olympics.jpg?width=270&format=png" alt="MSN London Olympics 2012"
             .image-overlay-zoom
         .item-description
           h4: a(href="http://london.msn.co.uk/") MSN London Olympic Games 2012 
@@ -235,7 +235,7 @@ h3 Who uses ImageResizer?
       .span3
         .picture
           a href="http://www.bilbasen.dk" title="example goes here"
-            img src="/img/logos/ebay_dk_270.jpg" alt="eBay denmark"
+            img src="http://img.imageresizing.net/s3/resizer-web/showcase/ebay_dk.jpg?width=270&format=png" alt="eBay denmark"
             .image-overlay-zoom
         .item-description
           h4
