Added showcase of websites below logos

--- a/content/index.slim
+++ b/content/index.slim
@@ -207,6 +207,10 @@ h3 Who uses ImageResizer?
     li: img src="http://img.imageresizing.net/s3/resizer-web/clientlogos/flavorplate.png?width=160&height=100" alt="flavor plate"
     li: img src="http://img.imageresizing.net/s3/resizer-web/clientlogos/MizuniLogoR_933x216.png?width=160&height=100" alt="Mizuni"
     li: img src="http://img.imageresizing.net/s3/resizer-web/clientlogos/SoulRebornLogo.png?width=160&height=100" alt="Soul Reborn"
+.bx-transparent
+  ul.client-logo-carousel
+    - ["3news-1", "bilbasen-1", "bjarnhoff-2", "bjarnhoff-1", "four-1", "four-3", "homgroup-1", "homgroup-2", "msn-1", "msn-2", "sierratradingpost-1", "sierratradingpost-3", "tradera-1", "unique-1", "unique-3", "vevo-1", "vevo-2", "vevo-3"].each do |name|
+      li: img src="http://img.imageresizing.net/s3/resizer-web/showcase/#{name}.png?width=160&height=120&a.sharpen=2"
 
 .row
   .span9
