--- a/content/css/less/custom.less
+++ b/content/css/less/custom.less
@@ -100,4 +100,9 @@ a.plaintext:hover{
   text-decoration: none !important;
 };
 
-
+/*
+a.block:hover .icons-box:after{
+  content: " read more ";
+}
+*/
+a.editlink{color:white; float:left;}
