Updated image URLs to use z.zr.io. Added PMG Austin and RepZio back.

--- a/content/docs/agile.slim
+++ b/content/docs/agile.slim
@@ -4,9 +4,9 @@ layout: benefits_page
 h1 Single-source imaging and Agility
 
 h2 Eliminate duplication, eliminate human error
-img src="http://img.imageresizing.net/s3/resizer-web/diagrams/agile-clutter.png"
+img src="http://z.zr.io/rw/diagrams/agile-clutter.png"
 i.icon-arrow-right style="font-size:36pt"
-img src="http://img.imageresizing.net/s3/resizer-web/diagrams/agile-simple.png?width=338&height=286&scale=canvas&anchor=topleft"
+img src="http://z.zr.io/rw/diagrams/agile-simple.png?width=338&height=286&scale=canvas&anchor=topleft"
 
 .hero-unit
   p Single-source imaging is an essential strategy for companies who wish to reduce maintenance and increase agility.
