--- a/content/index.slim
+++ b/content/index.slim
@@ -194,24 +194,24 @@ h1 RESTful image processing
 h3 Who uses ImageResizer?
 .bx-transparent
   ul.client-logo-carousel
-    li: img src="http://img.imageresizing.net/s3/resizer-web/clientlogos/collectiveli_256.png?width=160&height=100" alt="collective.li"
-    li: img src="http://img.imageresizing.net/s3/resizer-web/clientlogos/logo_mindrevolution_black.png?width=160&height=100"  alt="mindrevolution"
-    li: img src="http://img.imageresizing.net/s3/resizer-web/clientlogos/stp-logo-trans.png?width=160&height=100" alt="Sierra Trading Post"
-    li: img src="http://img.imageresizing.net/s3/resizer-web/clientlogos/eksponent.png?width=160&height=100"  alt="Eksponent"
-    / li: img src="/img/logos/pmg-austin-trans.png" alt="PMG Austin"
-    / li: img src="/img/logos/repzio-logo-144.gif"  alt="Repzio"
-    li: img src="http://img.imageresizing.net/s3/resizer-web/clientlogos/Microsoft200px.png?width=160&height=100" alt="Microsoft" 
+    li: img src="http://z.zr.io/rw/clientlogos/collectiveli_256.png?width=160&height=100" alt="collective.li"
+    li: img src="http://z.zr.io/rw/clientlogos/logo_mindrevolution_black.png?width=160&height=100"  alt="mindrevolution"
+    li: img src="http://z.zr.io/rw/clientlogos/stp-logo-trans.png?width=160&height=100" alt="Sierra Trading Post"
+    li: img src="http://z.zr.io/rw/clientlogos/eksponent.png?width=160&height=100"  alt="Eksponent"
+    li: img src="http://z.zr.io/rw/clientlogos/pmg_austin_logo.png?width=160&height=100"  alt="PMG Austin"
+    li: img src="http://z.zr.io/rw/clientlogos/repzio.png?width=160&height=100"  alt="RepZio"
+    li: img src="http://z.zr.io/rw/clientlogos/Microsoft200px.png?width=160&height=100" alt="Microsoft" 
     / http://www.microsoft.com/global/en-us/news/publishingimages/logos/MSFT_logo_Web.jpg
-    li: img src="http://img.imageresizing.net/s3/resizer-web/clientlogos/ebay-300.png?width=160&height=100" alt="eBay"
-    li: img src="http://img.imageresizing.net/s3/resizer-web/clientlogos/publishgreen.png?width=160&height=100" alt="Publish Green"
-    li: img src="http://img.imageresizing.net/s3/resizer-web/clientlogos/flavorplate.png?width=160&height=100" alt="flavor plate"
-    li: img src="http://img.imageresizing.net/s3/resizer-web/clientlogos/MizuniLogoR_933x216.png?width=160&height=100" alt="Mizuni"
-    li: img src="http://img.imageresizing.net/s3/resizer-web/clientlogos/SoulRebornLogo.png?width=160&height=100" alt="Soul Reborn"
+    li: img src="http://z.zr.io/rw/clientlogos/ebay-300.png?width=160&height=100" alt="eBay"
+    li: img src="http://z.zr.io/rw/clientlogos/publishgreen.png?width=160&height=100" alt="Publish Green"
+    li: img src="http://z.zr.io/rw/clientlogos/flavorplate.png?width=160&height=100" alt="flavor plate"
+    li: img src="http://z.zr.io/rw/clientlogos/MizuniLogoR_933x216.png?width=160&height=100" alt="Mizuni"
+    li: img src="http://z.zr.io/rw/clientlogos/SoulRebornLogo.png?width=160&height=100" alt="Soul Reborn"
 .bx-transparent
   ul.client-logo-carousel
-    - ["3news-1","3news", "bilbasen-3","bilbasen.dk (eBay Denmark)", "bjarnhoff-1","www.bjarnhoff.com", "four-1", "four","four-3", "","homgroup-1", "","homgroup-2", "","msn-1","","msn-2", "","sierratradingpost-1","","tradera-1", "","unique-1", "unique.dk","unique-3","unique.dk", "vevo-1", "vevo.com", "vevo-2", "vevo.com (2)", "vevo-3","vevo.com (3)", "citrus-retail-1", "www.citrus-retail.com", "edgeandwax-3", "www.edgeandwax.co.uk", "elections.oim-1","elections.oim.dk", "english.oim-1","english.oim.dk", "fawkes-cycles-1", "www.fawkes-cycles.co.uk", "gobasic-2", "gobasic.dk", "produktivitetskommissionen-1", "produktivitetskommissionen.dk", "stillwaterscamp-1","www.stillwaterscamp.org", "valg.oim-1","valg.oim.dk", "youngfoundations-1", "www.youngfoundations.org", "americastestkitchen-1","americastestkitchen.com","increo-1.png", "increo.no", "increo-3", "increo.no","lewis-1","","lewis-2","lewis","pictoric-3","","repzio-1","repzio.com","rezstream-1","rezstream", "sedonalace-1", "sedonalace","solidstockart-1","solidstockart","xparo-1","xparo"].each_slice(2) do |a|
+    - ["3news-1","3news", "bilbasen-3","bilbasen.dk (eBay Denmark)", "bjarnhoff-1","www.bjarnhoff.com", "four-1", "four","four-3", "","homgroup-1", "","homgroup-2", "","msn-1","","msn-2", "","sierratradingpost-1","","tradera-1", "","unique-1", "unique.dk","unique-3","unique.dk", "vevo-1", "vevo.com", "vevo-2", "vevo.com (2)", "vevo-3","vevo.com (3)", "citrus-retail-1", "www.citrus-retail.com", "edgeandwax-3", "www.edgeandwax.co.uk", "elections.oim-1","elections.oim.dk", "english.oim-1","english.oim.dk", "fawkes-cycles-1", "www.fawkes-cycles.co.uk", "gobasic-2", "gobasic.dk", "produktivitetskommissionen-1", "produktivitetskommissionen.dk", "stillwaterscamp-1","www.stillwaterscamp.org", "valg.oim-1","valg.oim.dk", "youngfoundations-1", "www.youngfoundations.org", "americastestkitchen-1","americastestkitchen.com","increo-1", "increo.no", "increo-3", "increo.no","lewis-1","","lewis-2","lewis","pictoric-3","","repzio-1","repzio.com","rezstream-1","rezstream", "sedonalace-1", "sedonalace","solidstockart-1","solidstockart","xparo-1","xparo"].each_slice(2) do |a|
       li
-        img src="http://img.imageresizing.net/s3/resizer-web/showcase/#{a[0]}.png?width=160&height=120&a.sharpen=2&break=1"
+        img src="http://z.zr.io/rw/showcase/#{a[0]}.png?width=160&height=120&a.sharpen=2&break=1"
         .screenshot-caption
           = a[1] 
           = a[0]
@@ -224,7 +224,7 @@ h3 Who uses ImageResizer?
       .span3
         .picture
           a href="http://www.collective.li" title="collective.li"
-            img src="http://img.imageresizing.net/s3/resizer-web/showcase/Banner780.jpg?width=270&format=png" alt="collective.li"
+            img src="http://z.zr.io/rw/showcase/Banner780.jpg?width=270&format=png" alt="collective.li"
             .image-overlay-zoom
         .item-description
           h4: a(href="http://www.collective.li") collective.li
@@ -233,7 +233,7 @@ h3 Who uses ImageResizer?
       .span3
         .picture
            a href="http://london.msn.co.uk/" title="MSN London Olympic Games 2012"
-            img src="http://img.imageresizing.net/s3/resizer-web/showcase/olympics.jpg?width=270&format=png" alt="MSN London Olympics 2012"
+            img src="http://z.zr.io/rw/showcase/olympics.jpg?width=270&format=png" alt="MSN London Olympics 2012"
             .image-overlay-zoom
         .item-description
           h4: a(href="http://london.msn.co.uk/") MSN London Olympic Games 2012 
@@ -243,7 +243,7 @@ h3 Who uses ImageResizer?
       .span3
         .picture
           a href="http://www.bilbasen.dk" title="example goes here"
-            img src="http://img.imageresizing.net/s3/resizer-web/showcase/ebay_dk.jpg?width=270&format=png" alt="eBay denmark"
+            img src="http://z.zr.io/rw/showcase/ebay_dk.jpg?width=270&format=png" alt="eBay denmark"
             .image-overlay-zoom
         .item-description
           h4
