--- a/content/plugins/bundles/contract.slim
+++ b/content/plugins/bundles/contract.slim
@@ -1,7 +1,7 @@
 Flags: bundle
 Bundle: contract
 Cost: Support contracts start at $900. Support expires, but licenses do not. 
-Warning: Bundles will be discontinued on Feb. 1 2013 in favor of a simplified product model.
+Warning: Bundles were discontinued on Feb. 1 2013 in favor of a simplified product model. Support contracts were not affected in any way.
 
 h1 Support Contract Plugins
 
