--- a/content/plugins/bundles/1.slim
+++ b/content/plugins/bundles/1.slim
@@ -1,7 +1,7 @@
 Flags: bundle
 Bundle: 1
 Cost: The Performance bundle costs $249 for an enterprise-wide license, or $99 for a personal license. 
-Warning: Bundles will be discontinued on Feb. 1 2013 in favor of a simplified product model.
+Warning: Bundles were discontinued on Feb. 1 2013 in favor of a simplified product model.
 
 h1 Performance Bundle
 
